--- a/powerpipe.ppvars.example
+++ b/powerpipe.ppvars.example
@@ -2,5 +2,14 @@
 common_dimensions = ["project", "location"]
 tag_dimensions    = []
 
-# List of trusted projects
-trusted_projects = ["my-trusted-project-1", "my-trusted-project-2"] 
+# List of trusted users
+trusted_users = ["user1@example.com", "user2@example.com"]
+
+# List of trusted groups
+trusted_groups = ["admins@googlegroups.com", "developers@googlegroups.com"]
+
+# List of trusted service accounts
+trusted_service_accounts = ["app-sa@project-id.iam.gserviceaccount.com"]
+
+# List of trusted domains
+trusted_domains = ["trusted-company.com", "trusted-partner.com"] 
